--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
       <style type="text/css">
-      table,thead,td
+      table,th,td
       {
         border:1px solid black;
         border-collapse:collapse;
