--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-      <style type="text/css">
+      <style>
       table,th,td
       {
         border:1px solid black;
@@ -62,8 +62,10 @@
       </tr>
     </tbody>
     <tfoot>
+      <tr>
       <td colspan="2">Solde</td>
       <td colspan="2">575,40</td>
+        </tr>
     </tfoot>
   </table>
 </body>
